# miniupdate

./: Changelog  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.ac  getifaddr.c  macosx.patch  main.c  md5.c  md5.h  miniupdate-debian.init  miniupdate-redhat.init  miniupdate.conf  miniupdate.h  misc.c  netwrapper.c  netwrapper.h  parseconf.c  perlfun.c  perlfun.h
