sbin_PROGRAMS = miniupdate
miniupdate_SOURCES = main.c perlfun.c md5.c parseconf.c misc.c getifaddr.c netwrapper.c miniupdate.h md5.h netwrapper.h perlfun.h
dist_sysconf_DATA = miniupdate.conf

# workaround Autoconf < 2.60 :
docdir = ${datadir}/doc/${PACKAGE} 

dist_doc_DATA = README COPYING Changelog miniupdate-redhat.init miniupdate-debian.init macosx.patch

